# odooMCP

./: AGENTS.md  CHANGES.md  DEPLOYMENT_GUIDE.md  Dockerfile  README.md  config.example.yml  deploy.sh  docker-compose.yml  env.example  nginx.conf  pyproject.toml
docs/: Odoo MCP Server (Enhanced for AI Agents).md  odoo_mcp_postman_collection.json  xmlrpc_enhancement_review.md
mcp_server_odoo/: __init__.py  __main__.py  config.py  http_server.py  logger.py  odoo_client.py  server.py
mcp_server_odoo/services/: __init__.py  cache_service.py  odoo_service.py
tests/: test_smoke.py
